--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -5,8 +5,8 @@
   align-items: center;
   background: rgba(0, 0, 0, 0.4);
   position: fixed;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   z-index: 1;
   top: 0;
   left: 0;
