--- a/src/views/NewGame/NewGame.scss
+++ b/src/views/NewGame/NewGame.scss
@@ -20,7 +20,13 @@
   img {
     object-fit: contain;
     height: 32px;
-    width: 100%;
+    // width: 100%;
+  }
+
+  .logo {
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
