--- a/src/components/Board/TopBar/TopBar.scss
+++ b/src/components/Board/TopBar/TopBar.scss
@@ -13,6 +13,7 @@
 
   >img {
     height: 32px;
+    width: 72px;
     cursor: pointer;
   }
 }
@@ -31,6 +32,7 @@
 
   >img {
     height: 16px;
+    width: 16px;
     padding-right: 9px;
   }
 }
@@ -38,7 +40,6 @@
 .restart {
   display: flex;
   margin-left: auto;
-  // justify-content: right;
 }
 
 .restart-btn {
@@ -51,5 +52,6 @@
 
   >img {
     height: 16px;
+    width: 16px;
   }
 }
