--- a/src/components/Board/TopBar/TopBar.scss
+++ b/src/components/Board/TopBar/TopBar.scss
@@ -8,23 +8,24 @@
 }
 
 .logo {
-  display: flex;
   align-items: center;
+  display: flex;
 
   >img {
+    cursor: pointer;
     height: 32px;
     width: 72px;
-    cursor: pointer;
   }
 }
 
 .turn-indicator {
-  display: flex;
   align-items: center;
   background: v.$color-cyan;
   border-radius: 5px;
   box-shadow: inset 0px -4px 0px v.$color-cyan-darkest;
   color: v.$color-gray;
+  display: flex;
+  gap: 9px;
   height: 100%;
   justify-content: center;
   margin: auto;
@@ -33,7 +34,6 @@
   >img {
     height: 16px;
     width: 16px;
-    padding-right: 9px;
   }
 }
 
@@ -44,8 +44,8 @@
 
 .restart-btn {
   background: v.$color-gray;
-  border: none;
   border-radius: 5px;
+  border: none;
   box-shadow: inset 0px -4px 0px v.$color-gray-dark;
   cursor: pointer;
   padding: 0 12px;
