--- a/src/utilities/_variables.scss
+++ b/src/utilities/_variables.scss
@@ -10,6 +10,7 @@ $color-yellow-dark: #CC8B13;
 $color-white: #DBE8ED;
 $color-gray: #A8BFC9;
 $color-gray-dark: #6B8997;
+$color-gray-darkest: #3c4b52;
 
 $font-family: "Outfit", sans-serif;
 
