--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -14,6 +14,7 @@
   box-shadow: inset 0 -8px 0 v.$color-cyan-darkest;
   cursor: pointer;
   min-height: 96px;
+  min-width: 96px;
 
   >img {
     height: 40px;
