--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -19,15 +19,13 @@
   display: flex;
   flex-direction: column;
   font-weight: v.$font-weight-extrasmall;
-  height: fit-content;
   justify-content: center;
-  left: 0;
   letter-spacing: v.$font-kerning-medium;
   opacity: 0.9;
   padding-bottom: 45px;
   padding-top: 45px;
   position: absolute;
-  width: 100vw;
+  width: 100%;
 
   button {
     border-radius: 10px;
