--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -26,6 +26,11 @@
     height: 40px;
     pointer-events: none;
     width: 40px;
+
+    @media screen and (min-width: 768px) {
+      height: 64px;
+      width: 64px;
+    }
   }
 }
 
