Vertically centered turn w/ respect to box-shadow

--- a/src/components/Board/TopBar/TopBar.scss
+++ b/src/components/Board/TopBar/TopBar.scss
@@ -19,7 +19,7 @@
 }
 
 .turn-indicator {
-  align-items: center;
+  padding-top: 9px;
   background: v.$color-cyan;
   border-radius: 5px;
   box-shadow: inset 0px -4px 0px v.$color-cyan-darkest;
