--- a/src/views/NewGame/NewGame.scss
+++ b/src/views/NewGame/NewGame.scss
@@ -85,6 +85,10 @@
     font-weight: v.$font-weight-extrasmall;
     letter-spacing: v.$font-kerning-extrasmall;
     padding: 14px 0 22px;
+
+    @media screen and (min-width: 768px) {
+      height: 67px;
+    }
   }
 }
 
