--- a/src/components/Board/BottomBar/BottomBar.scss
+++ b/src/components/Board/BottomBar/BottomBar.scss
@@ -33,3 +33,15 @@
     background: v.$color-yellow;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .score {
+    border-radius: 15px;
+    height: 72px;
+  }
+  
+  .score-amount {
+    font-size: v.$font-size-medium;
+    letter-spacing: v.$font-kerning-medium;
+  }
+}
