--- a/src/components/Board/TopBar/TopBar.scss
+++ b/src/components/Board/TopBar/TopBar.scss
@@ -1,4 +1,4 @@
-@use 'utilities/variables' as v;
+@use "utilities/variables" as v;
 
 .top-bar {
   display: grid;
@@ -11,7 +11,7 @@
   align-items: center;
   display: flex;
 
-  >img {
+  > img {
     cursor: pointer;
     height: 32px;
     width: 72px;
@@ -19,19 +19,19 @@
 }
 
 .turn-indicator {
-  padding-top: 9px;
+  align-items: center;
   background: v.$color-cyan;
   border-radius: 5px;
   box-shadow: inset 0px -4px 0px v.$color-cyan-darkest;
   color: v.$color-gray;
   display: flex;
-  // gap: 9px;
+  font-weight: v.$font-weight-extrasmall;
   height: 100%;
   justify-content: center;
   margin: auto;
   width: 96px;
 
-  >img {
+  > img {
     height: 16px;
     margin-right: 9px;
     width: 16px;
@@ -51,8 +51,40 @@
   cursor: pointer;
   padding: 0 12px;
 
-  >img {
+  > img {
     height: 16px;
     width: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .top-bar {
+    margin-bottom: 30px;
+  }
+  
+  .turn-indicator {
+    border-radius: 10px;
+    font-size: v.$font-size-extrasmall;
+    font-weight: v.$font-weight-extrasmall;
+    letter-spacing: v.$font-kerning-small;
+    min-height: 52px;
+    padding-bottom: 2px;
+    width: 142px; 
+
+    >img {
+      height: 20px;
+      width: 20px;
+    }
+  }
+
+  .restart-btn {
+    border-radius: 10px;
+    height: 52px;
+    width: 52px;
+
+    >img {
+      height: 20px;
+      width: 20px;
+    }
   }
 }
