--- a/src/views/NewGame/NewGame.scss
+++ b/src/views/NewGame/NewGame.scss
@@ -74,10 +74,7 @@
   color: v.$color-cyan-dark;
   display: flex;
   flex-direction: column;
-  // gap: 16px;
   margin-top: 40px;
-
-  > * + * { margin-bottom: 16px;}
 
   >button {
     border-radius: 15px;
@@ -87,10 +84,6 @@
     font-weight: v.$font-weight-extrasmall;
     letter-spacing: v.$font-kerning-extrasmall;
     padding: 14px 0 22px;
-
-    @media screen and (min-width: 768px) {
-      height: 67px;
-    }
   }
 }
 
@@ -103,4 +96,17 @@
 #vs-player-btn {
   background: v.$color-cyan-lighter;
   box-shadow: inset 0px -8px 0 v.$color-cyan-light;
+}
+
+@media screen and (min-width: 768px) {
+  .player-selector-mark {
+    font-size: v.$font-size-extrasmall;
+  }
+  
+  .opponent-selector {
+    >button {
+      font-size: v.$font-size-small;
+      height: 67px;
+    }
+  }
 }
